# LUNA-AI

./: .gitignore  Cargo.toml  Cargo.toml.bak  README.md  build.rs  luna.toml.example
.cargo/: config.toml
src/: ADD_TO_CARGO_TOML.txt  config.rs  main.rs
src/agent/: mod.rs
src/audio/: capture.rs
src/llm/: escalation.rs  mod.rs  ollama.rs  react.rs
src/memory/: mod.rs  permanent.rs
src/stt/: whisper.rs
src/tools/: desktop.rs  filesystem.rs  learn.rs  mod.rs  proactive.rs  shell.rs  todoist.rs  web.rs
src/tts/: mod.rs  piper.rs  rvc.rs
