[package]
name = "luna"
version = "0.1.0"
edition = "2021"

# ── Feature flags ─────────────────────────────────────────────────────────────
# voice-basic  = Piper only (CPU, always fast)
# voice-jinx   = Piper → RVC (CPU + GPU, sounds like Jinx)
[features]
default = ["voice-basic"]
voice-basic = []
voice-jinx  = []

# ── Core dependencies ─────────────────────────────────────────────────────────
[dependencies]

# Async runtime — every concurrent thing in Luna runs through tokio
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP client — streams Ollama responses chunk by chunk
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization — tool definitions, Ollama payloads, config file
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Config file — luna.toml: model name, voice mode, wake word, etc.
toml = "0.8"

# CLI args — things like `luna --voice jinx` or `luna --no-voice`
clap = { version = "=4.4.18", features = ["derive"] }

# Error handling
# anyhow   = propagate errors easily up the call stack
# thiserror = define your own typed errors per module
anyhow    = "1"
thiserror = "1"

# Logging — tracing is async-aware unlike log/env_logger
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Audio capture — mic input, works with pipewire on Arch
cpal = "0.15"

# Audio playback — plays wav output from Piper/RVC
rodio = { version = "0.19", features = ["wav"] }
hound = "3.5"   # wav file writing for STT input

# Keyboard listener — push-to-talk key detection without blocking
rdev = "0.5"

# Utility
dirs   = "5"         # finds ~/.config/luna, ~/.local/share/luna, etc.
uuid   = { version = "1", features = ["v4"] }
rpassword = "7"             # sudo password prompt via /dev/tty
chrono = { version = "0.4", features = ["serde"] }

# VAD — detect silence between words
webrtc-vad = "0.4"


# ── Build profiles ────────────────────────────────────────────────────────────
[profile.dev]
opt-level = 1        # faster to compile, still debuggable

[profile.release]
opt-level = 3
lto = true           # link-time optimization — meaningful speed gains
codegen-units = 1    # slower compile, better binary
strip = true         # strip debug symbols from release binary

#--- Env -----------------------------------------------------------------------
#[env]
#CUDA_PATH = "/opt/cuda"
